Bug 100024 - IMPRESS: CRASH when setting a background image
Summary: IMPRESS: CRASH when setting a background image
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha1
Hardware: All All
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0 target:5.1.4 target:7.2.0
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2016-05-24 09:19 UTC by Xisco Faulí
Modified: 2025-08-05 10:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2016-05-24 09:19:10 UTC
Description: Impress crashes when setting a background

Steps to reproduce:
1. Open Impress
2. Right button click on the slide - Set background Image
3. Select and image ( tested with jpg, png and bmp)
4. Either choose Yes or No in the dialog

Observed behavior: Impress Crashes

Expected behavior: The image is set to the background

Tested in:

Version: 5.2.0.0.alpha1+
Build ID: 4ab3149381352c86cb84fc01fe69b2c7929c98fb
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-05-24_00:57:46
Locale: es-ES (es_ES)

Also reproduced in Linux.
Comment 1 Xisco Faulí 2016-05-24 09:20:43 UTC
I can't reproduce in

Version: 5.0.4.2
Build ID: 2b9802c1994aa0b7dc6079e128979269cf95bc78
Locale: es-ES (es_ES

thus, adding keyword 'regression, bibisectRequest"
Comment 2 Regina Henschel 2016-05-24 15:07:10 UTC
I see the bug too in Version: 5.2.0.0.alpha1+
Build ID: 5dee1106703a14c0128880736db77cd7507df776
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
Locale: de-DE (de_DE)

It crashes too, when you use Slide Properties > Background > Bitmap, select one from the shown bitmaps > Yes/No > OK > Crash. It crashes too in Draw, but not Writer and not in Calc.
Comment 3 Katarina Behrens (Inactive) 2016-05-24 16:32:40 UTC
Likely consequence of adding slide format sidebar panel
Comment 4 Commit Notification 2016-05-24 19:59:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c5ab14e2bca0cc4fabd25b27f078a1c38fda4fa7

Resolves: tdf#100024 CRASH when setting a background image

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2016-05-25 08:32:24 UTC
Verified in

Version: 5.2.0.0.alpha1+ (x64)
Build ID: 44326f8dfabd81bf8b5a5c741f29ae8c57b4a88e
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2016-05-24_23:35:47
Locale: es-ES (es_ES)
Comment 6 Commit Notification 2016-05-26 08:21:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bcf7e38f4289fb13f0a5823d33f4cfc20f45683a&h=libreoffice-5-1

Resolves: tdf#100024 CRASH when setting a background image

It will be available in 5.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2021-02-01 21:52:21 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ec239e7e4cf9607858c0e194e4ebf9d0744c1daa

tdf#100024: uitest: add comment to existing test

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.