Resolves: tdf#100024 CRASH when setting a background image

possibly triggered by changes like...

commit bb3671180eb7327be9ac178e0d8341322f63d72a
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue May 17 20:38:37 2016 +0100

    Related: tdf#99523 NotifyPageEvent ultimately comes from HINT_PAGEORDERCHG...

    which is called for removepage, insertpage *and* change page number. e.g.
    ctrl+shift+end and similar *move* the page, in those cases not removing before
    adding results in duplicate pages/slides in the list, causing inconsistencies
    on what gets selected on undo

which made things not get arbitrarily duplicated during page changes

Change-Id: I0acf241947c9688f3512b54cc3d8f6892126495b
(cherry picked from commit c5ab14e2bca0cc4fabd25b27f078a1c38fda4fa7)
Reviewed-on: https://gerrit.libreoffice.org/25435
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit bcf7e38f4289fb13f0a5823d33f4cfc20f45683a)